# mnist

./: LICENSE  README.md  run.sh
client/: Dockerfile  README.md  client_entrypoint.py  pyproject.toml  requirements.txt
client/commands/: __init__.py  base_command.py  enums.py  train_mnist_model.py
client/grpc_clients/: __init__.py  mnist_client.py
client/protos/: compile_files.sh  mnist.proto
client/tests/: test_grcp_client.py  test_train_model_action.py
client/utils/: __init__.py  arg_parser.py  context_manager.py
compose/: client.yml  server.yml
mnist_service/: Dockerfile  README.md  pyproject.toml  requirements.txt  server_entrypoint.py
mnist_service/dataset_services/: __init__.py  base_dataset_service.py  deeplake_dataset_service.py  enums.py  tensorflow_dataset_service.py
mnist_service/grpc_service/: __init__.py  mnist_grpc_service.py
mnist_service/grpc_servicers/: __init__.py  mnist_grpc_servicer.py
mnist_service/protos/: compile_files.sh  mnist.proto
mnist_service/tests/: pytest.ini  test_deep_lake_dataset_service.py  test_mnist_grpc_service.py  test_tensorflow_dataset_service.py  test_tensorflow_loader.py
mnist_service/utils/: __init__.py  arg_parser.py  grpc_service_factory.py  logger.py
