[tool.poetry]
name = "mnist-client"
version = "1.0.0"
description = "A client fetch training data from the MNIST gRPC service."
authors = ["Chen Mishali"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

grpcio = "^1.59.3"
grpcio-tools = "^1.59.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
